--- a/gb/21/10/8/n13290263.md
+++ b/gb/21/10/8/n13290263.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wtnrng3147/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>九月九日重阳节 涵容什么文化意蕴？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/12/22fc11ba43dcd91a67630eabfd77076b-600x400.jpg" />
 <h6>九月九日重阳节，在中华文化中有多层次的义涵，意义深厚悠远。图为宋佚名《仙山楼阁图》。（公有领域）
 </h6>
 <hr>
-<p style="padding-left: 30px;"><span style="color: #800080;"><strong>“<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8D%E9%98%B3.md#1">重阳</a>节”，在中华文化中一直是个生命意味深长又特色鲜明的节日。重阳节是黄历的<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%B9%9D%E6%9C%88%E4%B9%9D%E6%97%A5.md#1">九月九日</a>，日、月皆逢九，两阳相重，故名“重九”、“重阳”，在民俗中称为“重阳节”，也简称“重节”。中国人自古以来重视重阳节，反映<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E5%A4%A9%E4%BA%BA%E5%90%88%E4%B8%80.md#1">天人合一</a>文化的内涵。</strong></span></p>
-<p><strong>九九<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8D%E9%98%B3.md#1">重阳</a>节在中华文化文化中凝聚了哪些文化、民俗意涵特色呢？</strong></p>
+<p style="padding-left: 30px;"><span style="color: #800080;"><strong>“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%8D%E9%98%B3.md#1">重阳</a>节”，在中华文化中一直是个生命意味深长又特色鲜明的节日。重阳节是黄历的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%9D%E6%9C%88%E4%B9%9D%E6%97%A5.md#1">九月九日</a>，日、月皆逢九，两阳相重，故名“重九”、“重阳”，在民俗中称为“重阳节”，也简称“重节”。中国人自古以来重视重阳节，反映<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A9%E4%BA%BA%E5%90%88%E4%B8%80.md#1">天人合一</a>文化的内涵。</strong></span></p>
+<p><strong>九九<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%8D%E9%98%B3.md#1">重阳</a>节在中华文化文化中凝聚了哪些文化、民俗意涵特色呢？</strong></p>
 <h3><span style="color: #800000;">一、九九阳极之数，宜长宜久的嘉节：</span></h3>
-<p>在《易经》之数中，九是阳极之数，又谐音为“久”。换言之，九九意为长长久久，就是长寿的象征。故而自古以来以这一天在民俗中也成了“老人节”、“<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E6%95%AC%E8%80%81%E8%8A%82.md#1">敬老节</a>”。西汉的《西京杂记》记载相关的民俗：“<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%B9%9D%E6%9C%88%E4%B9%9D%E6%97%A5.md#1">九月九日</a>，佩茱萸，食蓬饵，饮菊华酒，令人长寿。”</p>
+<p>在《易经》之数中，九是阳极之数，又谐音为“久”。换言之，九九意为长长久久，就是长寿的象征。故而自古以来以这一天在民俗中也成了“老人节”、“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%95%AC%E8%80%81%E8%8A%82.md#1">敬老节</a>”。西汉的《西京杂记》记载相关的民俗：“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%9D%E6%9C%88%E4%B9%9D%E6%97%A5.md#1">九月九日</a>，佩茱萸，食蓬饵，饮菊华酒，令人长寿。”</p>
 <h3><span style="color: #800000;">二、九九日月并阳，步步登高嘉节：</span></h3>
 <p>重阳日是步步登高的好时辰。从节气来看，重阳多落在秋高气爽的深秋，过了这一天就准备迎寒了，最佳秋色在九九重阳，因而这一天是登高的嘉（善）节。古人利用此日，举行宴飨高会。南朝梁《荆楚岁时记》也记载：“九月九日宴会，未知起于何代，然自汉至（南朝）宋未改。”</p>
 <p>三国时代，魏文帝曹丕在重阳日给好友、重臣钟繇写信，表示九月九日盛大聚会的雅兴：“岁往月来，忽复九月九日。九为阳数，而日月并应，俗嘉其名，以为宜于长久，故以享宴高会。”（《九日与钟繇书》）</p>
@@ -23,57 +23,57 @@
 <p>九九重阳辟恶疫的做法，从西汉就有了。《西京杂记》记载“九月九日，佩茱萸”，就是辟恶疫的一种做法。</p>
 <p>在民俗中，重九有防疫节的历史典故。南北朝吴均的《续齐谐记》记载，相传东汉时，豫州汝南（今河南汝南县）地方有个叫桓景的慕道之人，跟随方士费长房游学求道多年。有一年晚秋时节，费长房告诉桓景，九月九日汝南会遭瘟疫的灾厄。费长房事先教他辟灾的方法。</p>
 <p>桓景牢记费长房所授之法，他事先准备好茱萸囊和菊花酒。到了九月九日大清早，他将茱萸囊给家人乡人戴上，领着他们登高避祸。到了太阳下山才回家，发现家禽、家畜果然都暴死。据说，重阳佩茱萸登高避疫的习俗就这样代代流传下来了。</p>
-<h3><span style="color: #800000;">五、<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E5%A4%A9%E4%BA%BA%E5%90%88%E4%B8%80.md#1">天人合一</a>重阳日 识仙缘寻真乡：</span></h3>
+<h3><span style="color: #800000;">五、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A9%E4%BA%BA%E5%90%88%E4%B8%80.md#1">天人合一</a>重阳日 识仙缘寻真乡：</span></h3>
 <p>二千多年前战国时代，屈原在《远游》篇中探索“重阳”。屈原所指的“重阳”是清澈的天宇，是神仙之乡。古人有一说，天有九重，故而以“重阳”代指天。屈原远游赋吟：“集重阳入帝宫兮，造旬始（*星名，太白星）而观清都”，就是上了天境，去寻访庄严美好的神仙殿堂。</p>
 <p>相传九月九日这一天是中华民族的始祖黄帝乘龙升天之日，而著名的道教创始人张道陵天师也是在九月九日这天升天成仙。这样的历史与人物交织的图像，凸显了九月九日这一天的非凡意义，直接指向生命的探索。代代重阳，年年九九辰，一直在提醒人生命的深处记忆：怎样才能返本归真，脱去尘俗的拘绊，回到生命原乡最美好的境界？</p>
 <p>综合说来，九月九日重阳节，在中华文化中除了《易经》的生命哲学的含意、民俗的含意，还有修道成仙的修炼文化的典故，指向生命为何而来的追寻。这个节日意义，实在深厚悠远。@*#</p>
-<h2>─点阅【<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96300%E9%97%AE.md#1">中华文化300问</a>】系列─</h2>
+<h2>─点阅【<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96300%E9%97%AE.md#1">中华文化300问</a>】系列─</h2>
 <p>责任编辑：李梅</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/10/n13567902.md#1">元宵节俗传承 汤圆为何叫“元宵”？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/6/n13558131.md#1">“人日”是人类共同的生日 古传一粥助养生</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/28/n13536059.md#1">立春养生吃什么？古来重视这一盘</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/31/n13544497.md#1">春联的由来和奇趣 明太祖妙绝一御联</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/26/n13530698.md#1">过大年七大年俗 源流底蕴知多少？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/22/n13521981.md#1">新年招福从小年开始 古人有什么妙法？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/7/n13488752.md#1">腊八吃腊八粥好养生 怎样做营养腊八粥？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/1/n13474660.md#1">古人也跨年 古代跨年烟火是怎样的景象？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/9/22/n13252727.md#1">中秋节别名的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/22/n13252727.md#1">中秋节别名的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/6/n13213473.md#1">古今两个中秋礼俗各异 古代不送月饼 月饼何时普及？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/18/n13170184.md#1">处暑俗谚说了哪些下雨和秋收状况？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/3/n12920994.md#1">立夏让你美颜色 节令食俗有哪些作法？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/2/8/n12740747.md#1">带雪冲寒迎春花  贤相韩琦为何爱她？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/2/10/n12744238.md#1">春牛怎样迎春  为何迎春？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/23/n12706807.md#1">新年习俗：为何说春贴辟邪纳福？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/22/n12705178.md#1">“作牙”的起源和“后土”有何关联？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/13/n12685017.md#1">回顾腊八粥缘起 传达什么救人讯息？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/21/n11061288.md#1" target="_blank">林辉：毁黄帝炎帝陵 中共与中华民族水火不容</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/2/n11157870.md#1" target="_blank">中共强摘器官 芬兰议会九议员吁惩罚罪犯</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/26/n13606937.md#1">【马克时空】乌克兰抗俄 刺针、标枪、NLAW导弹立战功</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605215.md#1">【十字路口】俄乌战火炙热 中共会出兵夺台吗？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600282.md#1">【更新】俄宣战 乌克兰多城遭袭 国际回应</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602565.md#1">【微视频】普京：共产党惹的祸 乌克兰也这么想</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600024.md#1">香港娱乐圈爆发疫情 逾10名艺人确诊染疫</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13599881.md#1">容祖儿卖香港一处豪宅套现 亏损逾百万港币</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/1/n13275161.md#1">【百年真相】耀眼明星的陨落 上官云珠坠楼真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13281280.md#1">无神论统御的基督教王国</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13281397.md#1">中国佛教史上最大法难——中共毁灭佛教</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/5/n13284031.md#1">【未解之谜】英国鬼屋背后的真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297708.md#1">【新闻看点?】台湾成核心焦点 美中紧张升级？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297739.md#1">【远见快评】和统即武统？习与台湾隔空交手</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13295820.md#1">沈四海：香港禁止庆双十节 风暴后挂风球惹笑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295300.md#1">国军名将张灵甫遗孀王玉龄女士去世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13292560.md#1">【直播】110年台湾双十节 亮点流程一次看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13293154.md#1">【财商天下】中国地方债惊人 或引发企业倒闭潮</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295303.md#1">杜汶泽观台湾双十大典直播：相信这里有未来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295244.md#1">梅艳芳58岁冥寿 梁朝伟贴温馨合照悼念</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13293804.md#1">杨丽音揭童年阴影 自比茶叶蛋：裂痕多越入味</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297597.md#1">汤唯42歳生日 晒年迈父亲与5岁女儿合照</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297809.md#1">唐诗咏自曝：曾被嫌太瘦太矮不能演主角</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13293863.md#1">校车没来 美国老爸开加长型礼车送小孩上学</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13295825.md#1">第一款新冠口服药？莫纳皮拉韦效果副作用一次看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295565.md#1">不用再怕蟑螂  只要收藏7个天然除蟑妙方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/9/n13292766.md#1">【健康1+1】第一款DNA疫苗获批 比mRNA多2优点？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13294304.md#1">狮子从公厕里冒出来 让人看傻眼</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/8/n13290263.htm">九月九日重阳节 涵容什么文化意蕴？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/8/n13290263.htm">九月九日重阳节 涵容什么文化意蕴？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtnrng3147/djy/blob/master/gb/21/10/8/n13290263.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/8/n13290263.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
